@@ -1,1 +1,1 @@
-This file is depreciated.  Please see doc/README.txt.
+This file is deprecated.  Please see doc/README.txt.
