@@ -36,9 +36,7 @@ void foo(void)
   struct b x;
   x.c.v = 0;
   x.c.w = 250000;
-// Not supported by sdcc yet!
-//  x.d = x.c;
-  memcpy(&x.d, &x.c, sizeof(struct a));
+  x.d = x.c;
   bar(0, &x, ((void *)0));
 }
 
