@@ -10,8 +10,6 @@
 
 #include <stdarg.h>
 
-// Todo. Enable when sdcc supports struct assignment!
-#if 0
 typedef struct{double x,y;}point;
 point pts[]={{1.0,2.0},{3.0,4.0},{5.0,6.0},{7.0,8.0}};
 static int va1(int nargs,...)
@@ -41,12 +39,11 @@ static int va2(int nargs,...)
   }
   va_end(args);
 }
-#endif
 
 void
 testTortureExecute (void)
 {
-#if 0
+#if 0 // TODO: Enable when sdcc supports struct parameters
 va1(4,pts[0],pts[1],pts[2],pts[3]);
 va2(4,ipts[0],ipts[1],ipts[2],ipts[3]);
 return;
